test/conformance/kuttl/mutate/refactor/add-node-affinity/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-node-affinity
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
